fixing z-index

--- a/app/assets/stylesheets/components/_search-form-list.scss
+++ b/app/assets/stylesheets/components/_search-form-list.scss
@@ -6,6 +6,7 @@
   left: 0;
   padding: 6rem 2rem 0rem 18rem;
   background-color: #FAFAFA;
+  z-index: 6000;
 
   .form-inline {
     display: flex;
