--- a/app/assets/stylesheets/components/_sidebar-list.scss
+++ b/app/assets/stylesheets/components/_sidebar-list.scss
@@ -6,11 +6,10 @@
   padding: 1rem;
   width: 220px;
   top: 0;
-  z-index: 1000;
+  z-index: 8000;
   text-align: center;
   padding-top: 6rem;
   height: 100vh;
-  z-index: 10;
   overflow-y: scroll;
 
   h2 {
